--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -1,105 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find Nearby Mosque</title>
-    <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="masjidLocator.css" />
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzYlo7cul2YLTHD3hc0sextk-mixpOElU&libraries=places&callback=initMap"
-      async
-      defer
-    ></script>
-    <script src="js/masjidLocator.js"></script>
-    <link rel="stylesheet" href="time-contnt.css" />
-    <link rel="stylesheet" href="footerr.css" />
-  </head>
 
-  <body>
-    <header style="margin-bottom: 0.5%">
-      <div class="logo">
-        <a href="index.html">
-          <img class="logoStyle" src="images/logo2new.png" alt="Logo" />
-        </a>
-      </div>
-      <nav class="navbar">
-        <a href="QiblaFinder.html">QIBLA FINDER</a>
-        <a href="masjidLocator.html">MOSQUE LOCATOR</a>
-        <a href="prayerTime.html">PRAY TIME</a>
-        <a href="hadithFinderBaru.html">HADITH</a>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Find Nearby Mosque</title>
+  <link rel="stylesheet" href="header.css" />
+  <link rel="stylesheet" href="masjidLocator.css" />
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzYlo7cul2YLTHD3hc0sextk-mixpOElU&libraries=places&callback=initMap"
+    async defer></script>
+  <script src="js/masjidLocator.js"></script>
+  <link rel="stylesheet" href="time-contnt.css" />
+  <link rel="stylesheet" href="footerr.css" />
+</head>
 
-    <div class="top-content">
-      <div class="left-top">
-        <h1>Mosque Locator</h1>
-      </div>
-      <div class="right-top1">
-        <h1><span id="time"></span></h1>
-        <script src="js/time.js"></script>
-      </div>
+<body>
+  <header style="margin-bottom: 0.5%">
+    <div class="logo">
+      <a href="index.html">
+        <img class="logoStyle" src="images/logo2new.png" alt="Logo" />
+      </a>
     </div>
-    <div class="middle-content">
-      <hr style="margin-top: 0.7%; margin-bottom: 1%" />
-    </div>
+    <nav class="navbar">
+      <a href="QiblaFinder.html">QIBLA FINDER</a>
+      <a href="masjidLocator.html">MOSQUE LOCATOR</a>
+      <a href="prayerTime.html">PRAY TIME</a>
+      <a href="hadithFinderBaru.html">HADITH</a>
+      <a href="aboutUs.html">ABOUT US</a>
 
-    <div class="containers">
-      <div class="search-bar">
-        <input
-          type="text"
-          placeholder="Enter your location..."
-          id="search"
-          class="searchInput"
-        />
-        <button id="searchButton" class="searchbtn">Search</button>
-      </div>
-      <div id="map" class="map"></div>
-      <table id="mosqueTable">
-        <tbody></tbody>
-      </table>
-    </div>
+    </nav>
+  </header>
 
-    <section class="footer">
-      <div class="footer-row">
-        <div class="footer-col">
-          <div class="logoFoot">
-            <img src="images/logo2new.png" style="width: 200px" />
-          </div>
-          <p class="text">
-            "Welcome to Muslim Guider, your go-to app for all things Islamic.
-            Here, you'll find Hadiths, which are wise sayings from the Prophet
-            Muhammad, prayers times to help you stay on track, a map to locate
-            nearby mosques, and a tool to point you in the right direction for
-            prayer."
-          </p>
+  <div class="top-content">
+    <div class="left-top">
+      <h1>Mosque Locator</h1>
+    </div>
+    <div class="right-top1">
+      <h1><span id="time"></span></h1>
+      <script src="js/time.js"></script>
+    </div>
+  </div>
+  <div class="middle-content">
+    <hr style="margin-top: 0.7%; margin-bottom: 1%" />
+  </div>
+
+  <div class="containers">
+    <div class="search-bar">
+      <input type="text" placeholder="Enter your location..." id="search" class="searchInput" />
+      <button id="searchButton" class="searchbtn">Search</button>
+    </div>
+    <div id="map" class="map"></div>
+    <table id="mosqueTable">
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <section class="footer">
+    <div class="footer-row">
+      <div class="footer-col">
+        <div class="logoFoot">
+          <img src="images/logo2new.png" style="width: 200px" />
         </div>
-        <div class="footer-col">
-          <h3><strong>Menu</strong></h3>
-          <div class="links">
-            <p><a href="#">Qibla Finder</a></p>
-            <p><a href="#">Mosque Locator</a></p>
-            <p><a href="#">Prayer Time</a></p>
-            <p><a href="#">Hadith</a></p>
-            <p><a href="#">About Us</a></p>
-          </div>
-        </div>
-
-        <div class="footer-col">
-          <h3><strong>Contact</strong></h3>
-          <div class="links">
-            <p><a href="#">MuslimGuider@gmail.com</a></p>
-            <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
-            <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
-            <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
-            <p><a href="#">+60192829278 - Imran Bahar</a></p>
-          </div>
+        <p class="text">
+          "Welcome to Muslim Guider, your go-to app for all things Islamic.
+          Here, you'll find Hadiths, which are wise sayings from the Prophet
+          Muhammad, prayers times to help you stay on track, a map to locate
+          nearby mosques, and a tool to point you in the right direction for
+          prayer."
+        </p>
+      </div>
+      <div class="footer-col">
+        <h3><strong>Menu</strong></h3>
+        <div class="links">
+          <p><a href="#">Qibla Finder</a></p>
+          <p><a href="#">Mosque Locator</a></p>
+          <p><a href="#">Prayer Time</a></p>
+          <p><a href="#">Hadith</a></p>
+          <p><a href="#">About Us</a></p>
         </div>
       </div>
-    </section>
 
-    <div class="copy">
-      <p>© 2024 Muslim Guider Co. All rights reserved.</p>
+      <div class="footer-col">
+        <h3><strong>Contact</strong></h3>
+        <div class="links">
+          <p><a href="#">MuslimGuider@gmail.com</a></p>
+          <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
+          <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
+          <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
+          <p><a href="#">+60192829278 - Imran Bahar</a></p>
+        </div>
+      </div>
     </div>
-  </body>
+  </section>
+
+  <div class="copy">
+    <p>© 2024 Muslim Guider Co. All rights reserved.</p>
+  </div>
+</body>
+
 </html>
