--- a/index.html
+++ b/index.html
@@ -2,131 +2,135 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="homepage.css">
-    <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
-
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footerr.css">
-    <title>Muslim Guiderss</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="homepage.css">
+  <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
+  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="footerr.css">
+  <title>Muslim Guiderss</title>
 </head>
 
 <body>
-    <header style="margin-bottom: 0%">
-        <div class="logo">
-            <a href="index.html">
-                <img class="logoStyle" src="images/logo2new.png" alt="Logo" />
-            </a>
-        </div>
-        <nav class="navbar">
-            <a href="QiblaFinder.html">QIBLA FINDER</a>
-            <a href="masjidLocator.html">MOSQUE LOCATOR</a>
-            <a href="prayerTime.html">PRAY TIME</a>
-            <a href="hadithFinderBaru.html">HADITH</a>
-            <a href="aboutUs.html">ABOUT US</a>
-        </nav>
-    </header>
+  <header style="margin-bottom: 0%">
+    <div class="logo">
+      <a href="index.html">
+        <img class="logoStyle" src="images/logo2new.png" alt="Logo" />
+      </a>
+    </div>
+    <nav class="navbar">
+      <a href="QiblaFinder.html">QIBLA FINDER</a>
+      <a href="masjidLocator.html">MOSQUE LOCATOR</a>
+      <a href="prayerTime.html">PRAY TIME</a>
+      <a href="hadithFinderBaru.html">HADITH</a>
+      <a href="aboutUs.html">ABOUT US</a>
+    </nav>
+  </header>
 
-    <div class="text-container">
-        <div class="texts">
-            <h1>Welcome to Muslim Guiderss</h1>
-            <p>“Maka janganlah kamu merasa lemah dan janganlah kamu berputus asa, padahal kamulah orang yang lebih
-                tinggi kedudukannya jika kamu orang yang beriman.” [Surah Ali Imran: 139] </p>
-        </div>
+  <div class="text-container">
+    <div class="texts">
+      <h1>Welcome to Muslim Guiderss</h1>
+      <p>“Maka janganlah kamu merasa lemah dan janganlah kamu berputus asa, padahal kamulah orang yang lebih tinggi kedudukannya jika kamu orang yang beriman.” [Surah Ali Imran: 139] </p>
+    </div>
+  </div>
+
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+      <img src="images/masjid1.jpg" alt="Background 1">
     </div>
 
-    <div class="slideshow-container">
-        <DIV class="mySlides fade">
-            <img src="images/masjid1.jpg" alt="Background 1">
-        </DIV>
-
-        <div class="mySlides fade">
-            <img src="images/masjid2.jpg" alt="Background 2">
-        </div>
-
-        <div class="mySlides fade">
-            <img src="images/masjid3.jpg" alt="Background 3">
-        </div>
-        <div class="mySlides fade">
-            <img src="images/masjid4.jpg" alt="Background 3">
-        </div>
-        <div class="mySlides fade">
-            <img src="images/masjid5.jpg" alt="Background 3">
-        </div>
-        <div class="mySlides fade">
-            <img src="images/masjid6.jpg" alt="Background 3">
-        </div>
-        <div class="mySlides fade">
-            <img src="images/masjidputrajaya.jpg" alt="Background 3">
-        </div>
-        <div class="mySlides fade">
-            <img src="images/masjidTerapung.jpg" alt="Background 3">
-        </div>
-        <div class="mySlides fade">
-            <img src="images/masjidTurkey.jpg" alt="Background 3">
-        </div>
+    <div class="mySlides fade">
+      <img src="images/masjid2.jpg" alt="Background 2">
     </div>
 
-    <section class="footer">
-        <div class="footer-row">
-            <div class="footer-col">
-                <div class="logoFoot">
-                    <img src="images/logo2new.png" style="max-width: 200px" />
-                </div>
-                <p class="text">
-                    "Welcome to Muslim Guider, your go-to app for all things Islamic.
-                    Here, you'll find Hadiths, which are wise sayings from the Prophet
-                    Muhammad, prayers times to help you stay on track, a map to locate
-                    nearby mosques, and a tool to point you in the right direction for
-                    prayer."
-                </p>
-            </div>
-            <div class="footer-col">
-                <h3>Menu</h3>
-                <div class="links">
-                    <p><a href="QiblaFinder.html">Qibla Finder</a></p>
-                    <p><a href="masjidLocator.html">Mosque Locator</a></p>
-                    <p><a href="prayerTime.html">Prayer Time</a></p>
-                    <p><a href="hadithChapterbaru.html">Hadith</a></p>
-                    <p><a href="aboutUs.html">About Us</a></p>
-                </div>
-            </div>
-
-            <div class="footer-col">
-                <h3><strong>Contact</strong></h3>
-                <div class="links">
-                    <p><a href="mailto:s67662@ocean.umt.edu.my">MuslimGuider@gmail.com</a></p>
-                    <p><a href="https://wa.link/9qnm54">+601120517289 - Ahmad Muaz</a></p>
-                    <p><a href="https://wa.link/3vx8uy">+60134143356 - Farid Izzuddin</a></p>
-                    <p><a href="https://wa.link/l7gqsn">+60179841826 - Tuan Firdaus</a></p>
-                    <p><a href="https://wa.link/jgt02l">+60192829278 - Imran Bahar</a></p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <div class="copy">
-        <p>© 2024 Muslim Guider Co. All rights reserved.</p>
-
+    <div class="mySlides fade">
+      <img src="images/masjid3.jpg" alt="Background 3">
     </div>
 
-    <script>
-        var slideIndex = 0;
-        showSlides();
+    <div class="mySlides fade">
+      <img src="images/masjid4.jpg" alt="Background 4">
+    </div>
 
-        function showSlides() {
-            var i;
-            var slides = document.getElementsByClassName("mySlides");
-            for (i = 0; i < slides.length; i++) {
-                slides[i].style.display = "none";
-            }
-            slideIndex++;
-            if (slideIndex > slides.length) { slideIndex = 1 }
-            slides[slideIndex - 1].style.display = "block";
-            setTimeout(showSlides, 2000); // Change image every 2 seconds
-        }
-    </script>
+    <div class="mySlides fade">
+      <img src="images/masjid5.jpg" alt="Background 5">
+    </div>
+
+    <div class="mySlides fade">
+      <img src="images/masjid6.jpg" alt="Background 6">
+    </div>
+
+    <div class="mySlides fade">
+      <img src="images/masjidputrajaya.jpg" alt="Background 7">
+    </div>
+
+    <div class="mySlides fade">
+      <img src="images/masjidTerapung.jpg" alt="Background 8">
+    </div>
+
+    <div class="mySlides fade">
+      <img src="images/masjidTurkey.jpg" alt="Background 9">
+    </div>
+  </div>
+
+  <section class="footer">
+    <div class="footer-row">
+      <div class="footer-col">
+        <div class="logoFoot">
+          <img src="images/logo2new.png" style="max-width: 200px" />
+        </div>
+        <p class="text">
+          "Welcome to Muslim Guider, your go-to app for all things Islamic.
+          Here, you'll find Hadiths, which are wise sayings from the Prophet
+          Muhammad, prayers times to help you stay on track, a map to locate
+          nearby mosques, and a tool to point you in the right direction for
+          prayer."
+        </p>
+      </div>
+
+      <div class="footer-col">
+        <h3>Menu</h3>
+        <div class="links">
+          <p><a href="QiblaFinder.html">Qibla Finder</a></p>
+          <p><a href="masjidLocator.html">Mosque Locator</a></p>
+          <p><a href="prayerTime.html">Prayer Time</a></p>
+          <p><a href="hadithChapterbaru.html">Hadith</a></p>
+          <p><a href="aboutUs.html">About Us</a></p>
+        </div>
+      </div>
+
+      <div class="footer-col">
+        <h3><strong>Contact</strong></h3>
+        <div class="links">
+          <p><a href="mailto:s67662@ocean.umt.edu.my">MuslimGuider@gmail.com</a></p>
+          <p><a href="https://wa.link/9qnm54">+601120517289 - Ahmad Muaz</a></p>
+          <p><a href="https://wa.link/3vx8uy">+60134143356 - Farid Izzuddin</a></p>
+          <p><a href="https://wa.link/l7gqsn">+60179841826 - Tuan Firdaus</a></p>
+          <p><a href="https://wa.link/jgt02l">+60192829278 - Imran Bahar</a></p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="copy">
+    <p>© 2024 Muslim Guider Co. All rights reserved.</p>
+  </div>
+
+  <script>
+    var slideIndex = 0;
+    showSlides();
+
+    function showSlides() {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      slideIndex++;
+      if (slideIndex > slides.length) { slideIndex = 1 }
+      slides[slideIndex - 1].style.display = "block";
+      setTimeout(showSlides, 2000); // Change image every 2 seconds
+    }
+  </script>
 </body>
 
 </html>
