--- a/hadithChapterbaru.html
+++ b/hadithChapterbaru.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="time-contnt.css">
     <link rel="stylesheet" href="hadithChapter.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
 
     <link rel="stylesheet" href="header.css">
@@ -65,7 +65,7 @@
     <br><br>
     <div class="search-bar">
         <input type="text" id="searchInput" placeholder="Enter word to search inside the hadith">
-        <button id="search" onclick="searchWord()"><i class='bx bx-search'></i></button>
+        <button id="search" onclick="searchWord()"><i class="bx bx-search"></i></button>
     </div>
     <!-- <div id="valueDisplay"></div> -->
 
@@ -86,7 +86,7 @@
     </div>
 
 
-    </div>
+
     <script src="hadithChapterBaru.js"></script>
     <section class="footer">
         <div class="footer-row">
